--- a/ClassLibrary1/ClassLibrary1.csproj
+++ b/ClassLibrary1/ClassLibrary1.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CarParking.cs" />
     <Compile Include="CelestialBody.cs" />
     <Compile Include="GasGigant.cs" />
+    <Compile Include="IdNumber.cs" />
     <Compile Include="IInit.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
