--- a/ClassLibrary1/ClassLibrary1.csproj
+++ b/ClassLibrary1/ClassLibrary1.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Input.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCollections.cs" />
     <Compile Include="WeightComparer.cs" />
     <Compile Include="Star.cs" />
   </ItemGroup>
